@@ -13,7 +13,7 @@
 */
 
 #define _BSD_SOURCE 1      /* Make sure strdup() is in string.h */
-#define _XOPEN_SOURCE 500  /* Make sure strdup() is in string.h */
+#define _XOPEN_SOURCE 600  /* Make sure strdup() is in string.h */
 
 #include "pm_c_util.h"
 #include <ctype.h>
